# suu-mcp

./: .gitignore  README.md  pyproject.toml
examples/: multi_row_test.json  payment_request_data.example.json  purchase_request_data.example.json
forms/: payment_request.json  purchase_request.json
scripts/: create_form_def.py  demo.py  inspect_form.py  record_form_def.py  run_form.py  save_auth.py  verify.py
src/: __init__.py  executor.py  learner.py  recorder.py  schema.py  server.py
suu_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_executor.py  test_schema.py
